--- a/contactUs.html
+++ b/contactUs.html
@@ -34,7 +34,7 @@
               <a class="nav-link" href="Reviews.html">Reviews</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="contact us.html">Contact us</a>
+              <a class="nav-link" href="contactUs.html">Contact us</a>
             </li>
           </ul>
         </div>
