--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <a class="nav-link" href="Reviews.html">Reviews</a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="Contact us.html">Contact us</a>
+              <a class="nav-link" href="contactUs.html">Contact us</a>
             </li>
           </ul>
         </div>
